--- a/compilations/temp.tex
+++ b/compilations/temp.tex
@@ -14,7 +14,7 @@
 % \usepackage[lyric]{songs}
 % \usepackage[slides]{songs}
 
-\title{Gitáros mise\\\textit{(2021. május 1.)}}
+\title{Gitáros mise\\\textit{(2021. június 6.)}}
 % \author{Donkó István}
 \date{}
 
@@ -64,7 +64,7 @@
     \vspace*{1.5cm}
     {\huge Gitáros mise} \\
     \vspace*{0.1cm}
-    {\Large \textit{(2021. május 1.)}}
+    {\Large \textit{(2021. június 6.)}}
     \vspace{2cm}
   \end{center}
   % \vspace{-0.25cm}
@@ -73,7 +73,7 @@
   % \includeonlysongs{80,M10,55,26,M30,M40,85,40,15}
   % \includeonlysongs{46,M10,M20,84,20,56,M30,M40,87,48,97,73,40,92}
   % \includeonlysongs{6,M10,M20,888,T101,999,26,M30,M40,87,88,85,118}
-  \includeonlysongs{46,M10,M20,T6,T101,56,M30,M40,65,87,90,116}
+  \includeonlysongs{46,M10,M20,T3,7,85,M31,M42,89,71,4}
   % \includeonlysongs{T101}
   % \includeonlysongs{999}
   % \includeonlysongs{999,M41}
@@ -101,5 +101,5 @@
   % % To be continued...
   % \vspace*{\fill}
   % \vfill
-  % Budaörs, 2021. május 1.
+  % Budaörs, 2021. június 6.
 \end{document}
