--- a/compilations/temp.tex
+++ b/compilations/temp.tex
@@ -60,24 +60,26 @@
     \baselineadj=2pt plus 1pt minus 1pt
   \fi
 
-  \begin{center}
-    \vspace*{1.5cm}
-    {\huge Gitáros mise} \\
-    \vspace*{0.1cm}
-    {\Large \textit{(2021. június 6.)}}
-    \vspace{2cm}
-  \end{center}
+  % \begin{center}
+  %   \vspace*{1.5cm}
+  %   {\huge Gitáros mise} \\
+  %   \vspace*{0.1cm}
+  %   {\Large \textit{(2021. június 6.)}}
+  %   \vspace{2cm}
+  % \end{center}
   % \vspace{-0.25cm}
 
   % \includeonlysongs{M11,101,56,M11,101,56}
   % \includeonlysongs{80,M10,55,26,M30,M40,85,40,15}
   % \includeonlysongs{46,M10,M20,84,20,56,M30,M40,87,48,97,73,40,92}
   % \includeonlysongs{6,M10,M20,888,T101,999,26,M30,M40,87,88,85,118}
-  \includeonlysongs{46,M10,M20,M21,T3,7,85,M31,M42,89,71,4}
+  % \includeonlysongs{46,M10,M20,M21,T3,7,85,M31,M42,89,71,4}
   % \includeonlysongs{T101}
   % \includeonlysongs{999}
   % \includeonlysongs{999,M41}
   % \includeonlysongs{54,90,36,80,91,77,97,40,84,11,6}
+
+  \includeonlysongs{45,50,74,77,63,65,88,87,91,96,T1,10,97}
 
   \begin{songs}{}
     \input{songs.tex}
