--- a/compilations/temp.tex
+++ b/compilations/temp.tex
@@ -10,11 +10,12 @@
 \usepackage{multicol}
 \usepackage[bookmarks]{hyperref}
 
-\usepackage[chorded]{songs}
-% \usepackage[lyric]{songs}
+% \usepackage[chorded]{songs}
+\usepackage[lyric]{songs}
 % \usepackage[slides]{songs}
 
-\title{Gitáros mise\\\textit{(2021. június 6.)}}
+% \title{RáBalics nászmise\\\textit{(2021. október 9.)}}
+\title{Gitáros mise\\\textit{(2022. április 3.)}}
 % \author{Donkó István}
 \date{}
 
@@ -28,7 +29,7 @@
 \setlength{\evensidemargin}{-1.8cm}
 
 \setlength{\textwidth}{13.25cm}
-\setlength{\textheight}{18.25cm}
+\setlength{\textheight}{19cm}
 
 \setlength{\songnumwidth}{1.02cm}
 \setlength{\versenumwidth}{0.5cm}
@@ -42,6 +43,7 @@
 \notenames{A}{H}{C}{D}{E}{F}{G}
 
 \begin{document}
+  % \pagenumbering{gobble}
   \pagenumbering{arabic}
 
   % \begin{titlepage}
@@ -61,25 +63,38 @@
   \fi
 
   % \begin{center}
-  %   \vspace*{1.5cm}
+  %   \vspace*{0cm}
   %   {\huge Gitáros mise} \\
   %   \vspace*{0.1cm}
-  %   {\Large \textit{(2021. június 6.)}}
-  %   \vspace{2cm}
+  %   {\Large \textit{(2022. április 3.)}}
+  %   \vspace{1cm}
   % \end{center}
   % \vspace{-0.25cm}
+
+  % \begin{center}
+  %   % \vspace*{1.5cm}
+  %   {\huge RáBalics nászmise} \\
+  %   \vspace*{0.1cm}
+  %   {\Large \textit{(2021. október 9.)}}
+  %   % \vspace{2cm}
+  % \end{center}
+  \vspace{-0.25cm}
 
   % \includeonlysongs{M11,101,56,M11,101,56}
   % \includeonlysongs{80,M10,55,26,M30,M40,85,40,15}
   % \includeonlysongs{46,M10,M20,84,20,56,M30,M40,87,48,97,73,40,92}
   % \includeonlysongs{6,M10,M20,888,T101,999,26,M30,M40,87,88,85,118}
+  % \includeonlysongs{M11,87,125,56,M31,M42,91,59,T2}
+  % \includeonlysongs{76,M10,M20,T12,???,24,M31,M42,68,87,40} % 2022. feb.
+  % \includeonlysongs{56,M10,16,T8,24,M30,M41,25,48,4}
+  \includeonlysongs{118,M10,M20,7,T101,89,M30,M41,82,51,36,37,12,23}
   % \includeonlysongs{46,M10,M20,M21,T3,7,85,M31,M42,89,71,4}
   % \includeonlysongs{T101}
   % \includeonlysongs{999}
   % \includeonlysongs{999,M41}
   % \includeonlysongs{54,90,36,80,91,77,97,40,84,11,6}
 
-  \includeonlysongs{45,50,74,77,63,65,88,87,91,96,T1,10,97}
+  % \includeonlysongs{45,50,74,77,63,65,88,87,91,96,T1,10,97}
 
   \begin{songs}{}
     \input{songs.tex}
@@ -97,11 +112,15 @@
     % \renewcommand{\thesongnum}{M\arabic{songnum}}
     % \setlength{\songnumwidth}{1.25cm}
     \input{songs-mass.tex}
+
+    \renewcommand{\thesongnum}{???}
+    \beginsong{Alleluja}\endsong
+
   \end{songs}
   % \newpage
   % \thispagestyle{empty}
   % % To be continued...
   % \vspace*{\fill}
   % \vfill
-  % Budaörs, 2021. június 6.
+  % Budaörs, 2021. december 17.
 \end{document}
