Add original Italian titles for songs

--- a/songs/szamtalan-a-csoda.tex
+++ b/songs/szamtalan-a-csoda.tex
@@ -1,4 +1,4 @@
-\beginsong{Számtalan a csoda}
+\beginsong{Számtalan a csoda \\ Grandi cose}
 [
   by={Gen Rosso}
 ]
@@ -9,15 +9,14 @@
     Az \[C]Ő sza\[G]va az élet, \[Dm] minden \[Am]igéje tűz,
     \[C]Bennünk akar \[F]továbbélni \[C]mindenütt a \[G]Földön,
     Mert \[Am]Ő az a bővizű, \[Dm]életadó, tiszta \[Em]forrás:
-    Ki ebből mer\[F]ít, soha nem szomjazik \[G]már!
+    Ki ebből mer\[F]ít, soha nem szomjazik \[G] már!
   \endchorus
 
  \beginverse*
     ^Úgy, mint a ^mag, mely ^földbe hullik ^és kihajt:
-    ^Úgy termi ^élő Igéd ^bennünk égi ^gyümölcsét.
+    ^ Úgy termi ^élő Igéd ^bennünk égi ^gyümölcsét.
     ^Fény és re^mény, ^béke, öröm, ^szabadság:
-    ^Jézussal ^köztünk vagyunk
-    Az ^egész Földön ^egy család!
+    ^Jézussal ^köztünk vagyunk az ^egész Földön ^egy család!
   \endverse
 
   \beginverse*
