--- a/songs/szuntelenul-neked-eneklek-maria.tex
+++ b/songs/szuntelenul-neked-eneklek-maria.tex
@@ -1,4 +1,4 @@
-\beginsong{Szüntelenül Néked éneklek, Mária}
+\beginsong{Szüntelenül Néked éneklek, Mária \\ Canto a te, Maria}
 [
   by={Gen Verde}
 ]
