Fix typos and minor updates for songs from Kazetta

--- a/songs/atya-aldott-legyel.tex
+++ b/songs/atya-aldott-legyel.tex
@@ -1,6 +1,6 @@
 \beginsong{Atya, áldott legyél}
 [
-  by={zene és szöveg: A. Fleury, alaptálta: Fábry K.}
+  by={zene és szöveg: A. Fleury, adaptálta: Fábry K.}
 ]
 
   \beginchorus
@@ -29,8 +29,8 @@
   \endverse
 
   \beginverse
-    ^Szállj le ^ránk, Lélek^istenünk! ^Az utunkon ^légy ve^lünk!
-    Jöjj, ve^zess, Te vagy az ^Élte^tőnk! Ha ^fára^dunk, kérünk ^adj e^rőt!
+    ^Szállj le ^ránk, Lélek^istenünk, ^az utunkon ^légy ve^lünk!
+    Jöjj, ve^zess, Te vagy az ^Élte^tőnk, ha ^fára^dunk, kérünk ^adj e^rőt!
   \endverse
 
   \beginverse*
