--- a/songs/atyaisten-a-neped.tex
+++ b/songs/atyaisten-a-neped.tex
@@ -1,10 +1,11 @@
 \beginsong{Atyaisten, a néped}
 [
-  by={zene és szöveg: A. Broeders, alaptálta: Fábry K.}
+  by={zene és szöveg: A. Broeders, adaptálta: Fábry K.}
 ]
 
-  % TODO memorize remove
-  \beginverse\memorize
+  % https://youtu.be/TuE9nzUoTQA
+
+  \beginverse
     Atya\[G]isten a \[Hm]néped jön \[C]Hozz\[Em7/H]ád,
     És \[Am]el\[G/H]hozza \[C2]ál\[C]doza\[D4]t\[D]át,
     Mely a \[G]munkánk s a \[Hm]földünk gyü\[C]mölcs\[Em]e:
