--- a/songs2.tex
+++ b/songs2.tex
@@ -4,14 +4,20 @@
 \input{songs/atya-aldott-legyel.tex}
 \input{songs/atyaisten-a-neped.tex}
 \input{songs/baranyom-baranyom.tex}
+\input{songs/bemegyek-a-szentek-szentjebe.tex}
 \input{songs/finn-zarandokenek.tex}
 \input{songs/halovetok.tex}
 \input{songs/itt-a-szivem.tex}
+\input{songs/jezus-neved-oly-csodalatos.tex}
 \input{songs/jezus-te-vagy-az-ur-orokke.tex}
+\input{songs/keszitsuk-el.tex}
+\input{songs/labadnal-terdelek.tex}
 \input{songs/menjetek-be-kapuin.tex}
 \input{songs/nagy-vagy-urunk.tex}
 \input{songs/ropke-fohasz.tex}
 \input{songs/szentlelek.tex}
 \input{songs/szivem-telve-van-veled.tex}
+\input{songs/te-vagy-szerelme.tex}
 \input{songs/utazos-dal.tex}
+\input{songs/vedd-a-szivem.tex}
 \input{songs/zengd-velunk.tex}
