Add more songs for ordinarium parts

--- a/songs-mass.tex
+++ b/songs-mass.tex
@@ -4,13 +4,17 @@
 \setcounter{songnum}{10}
 \input{songs-mass/uram-irgalmazz-k159.tex}
 \input{songs-mass/uram-irgalmazz-k129B.tex}
+\input{songs-mass/uram-irgalmazz-d43.tex}
 
 \setcounter{songnum}{20}
 \input{songs-mass/dicsoseg-k159.tex}
+\input{songs-mass/dicsoseg-d36.tex}
 
 \setcounter{songnum}{30}
 \input{songs-mass/szent-vagy-k192.tex}
+\input{songs-mass/szent-vagy-k159.tex}
 
 \setcounter{songnum}{40}
 \input{songs-mass/isten-baranya-k299.tex}
 \input{songs-mass/isten-baranya-k302.tex}
+\input{songs-mass/isten-baranya-k159.tex}
