--- a/songs2.tex
+++ b/songs2.tex
@@ -4,19 +4,23 @@
 \input{songs/atya-aldott-legyel.tex}
 \input{songs/atyaisten-a-neped.tex}
 \input{songs/baranyom-baranyom.tex}
+\input{songs/beke-istene.tex}
 \input{songs/bemegyek-a-szentek-szentjebe.tex}
 \input{songs/finn-zarandokenek.tex}
 \input{songs/halovetok.tex}
 \input{songs/itt-a-szivem.tex}
 \input{songs/jezus-neved-oly-csodalatos.tex}
 \input{songs/jezus-te-vagy-az-ur-orokke.tex}
+\input{songs/jezus-vered-megtisztit.tex}
 \input{songs/keszitsuk-el.tex}
 \input{songs/labadnal-terdelek.tex}
 \input{songs/menjetek-be-kapuin.tex}
 \input{songs/nagy-vagy-urunk.tex}
+\input{songs/o-te-vagy-uram}
 \input{songs/ropke-fohasz.tex}
 \input{songs/szentlelek.tex}
 \input{songs/szivem-telve-van-veled.tex}
+\input{songs/te-vagy-az-ut.tex}
 \input{songs/te-vagy-szerelme.tex}
 \input{songs/utazos-dal.tex}
 \input{songs/vedd-a-szivem.tex}
