Apply minor corrections

--- a/songs-mass/dicsoseg-k159.tex
+++ b/songs-mass/dicsoseg-k159.tex
@@ -23,7 +23,7 @@
     Te az \[F]Atya jobbján \[E]ülsz, \[E] irgalmazz \[A]nékünk!
     Mert \[D]egyedül Te vagy a Szent, Te vagy az \[A]Úr,
     Te vagy az \[F#m]egyetlen Föl\[E]ség, Jézus \[A]Krisztus,
-    A \[F#m]Szentlélekkel \[Hm]együtt, az \[E]Atyaisten dicsőségé\[A]ben. \[G]
+    A \[F#]Szentlélekkel \[Hm]együtt, az \[E]Atyaisten dicsőségé\[A]ben. \[G]
     \[A]{\_{A}}\[D]men.
   \endverse
 
