--- a/songs-mass/isten-baranya-k299.tex
+++ b/songs-mass/isten-baranya-k299.tex
@@ -27,7 +27,7 @@
 
   \ifchorded
     \beginverse*
-      {\nolyrics Utójáték: \[Em] \[Am] \[Ebdim] \[Em]}
+      {\nolyrics Utójáték: \[Em] \[Am] \[E&dim] \[Em]}
     \endverse
   \fi
 
