--- a/songs-mass/uram-irgalmazz-k129B.tex
+++ b/songs-mass/uram-irgalmazz-k129B.tex
@@ -12,25 +12,25 @@
 
   \beginverse\memorize
     \[A6]Jézus Krisztus, Téged \[G6]elküldött az Atya,
-    Hogy \[A]gyógyítsd a megtört \[D]szívűeket.
+    Hogy \[A]gyógyítsd a megtört \[D]szívűeket. \[D7]
     /: Uram, \[G]irgalmazz nekünk!
-    Uram, \[D]irgalmazz nekünk!
+    Uram, \[D]irgalmazz ne\[Hm]künk!
     Uram, \[Em]irgal\[A]mazz nek\[G]ünk! \[D] :/ \rep{2}
   \endverse
 
   \beginverse
     ^Jézus Krisztus, Te ^eljöttél hozzánk,
-    Hogy ^hívjad a bűnös ^embereket.
+    Hogy ^hívjad a bűnös ^embereket. ^
     /: Krisztus, ^kegyelmezz nekünk!
-    Krisztus, ^kegyelmezz nekünk!
+    Krisztus, ^kegyelmezz ne^künk!
     Krisztus, ^kegyel^mezz nek^ünk! ^ :/ \rep{2}
   \endverse
 
   \beginverse
     ^Jézus Krisztus, Te az ^Atya jobbján ülsz,
-    Hogy ^értünk örökre ^közbenjárj.
+    Hogy ^értünk örökre ^közbenjárj. ^
     /: Uram, ^irgalmazz nekünk!
-    Uram, ^irgalmazz nekünk!
+    Uram, ^irgalmazz ne^künk!
     Uram, ^irgal^mazz nek^ünk! ^ :/ \rep{2}
   \endverse
 
