--- a/songs/en-uram-en-istenem.tex
+++ b/songs/en-uram-en-istenem.tex
@@ -6,7 +6,7 @@
 
   \ifchorded
     \beginverse*
-      {\nolyrics Előjáték: \[Em] \[H7] \[G] \[D] \[Em] \[H7] \[G] \[D] \[Em]}
+      {\nolyrics Előjáték: \[Em] \[H7] \[G] \[D] \[C] \[H7] \[G] \[D] \[Em]}
     \endverse
   \fi
 
