--- a/songs/itt-a-szivem.tex
+++ b/songs/itt-a-szivem.tex
@@ -5,7 +5,7 @@
 
   % https://youtu.be/W2xj6v2AiIQ
   \ifchorded
-    \textnote{A közjátékok első akkordjai már a refrén utolsó szótagánál ("jön") kezdődnek.}
+    \musicnote{A közjátékok első akkordjai már a refrén utolsó szótagánál ("jön") kezdődnek.}
   \fi
 
   \ifchorded
