--- a/songs/mert-tudom.tex
+++ b/songs/mert-tudom.tex
@@ -7,7 +7,7 @@
 
   \beginchorus
     Mert az \[D]angyalok \[G]visznek Őhoz\[D]zá,
-    S a po\[F#m]kol e\[Hm]r{\_{ő}}i sem \[G]állítnak \[A]meg. \[A4] \[A]
+    S a po\[F#m]kol e\[Hm]r{\_{ő}}i sem \[Em]állítnak \[A]meg. \[A4] \[A]
     Nem \[G]számít, ha hegyte\[D]tőn állok meg, vagy a \[Hm]sík ten\[G]ger part\[A]ján,
     Mert az \[D]{\_{Ú}}r alkotta \[Hm]m{\_{i}}ndezt, és \[G]minden az Ö\[A]vé.
   \endchorus
